# canvodpy

./: .env.example  .git-changelog.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  ACTION_PLAN_DEPENDENCIES.md  ACTUAL_REAL_STATUS.md  ACTUAL_STATUS_QUO.md  ACTUAL_SUBMODULE_STRUCTURE.md  AGENTS.md  ANALYSIS_RINEX304VALIDATOR_MISSING.md  API_DESIGN_GUIDE.md  API_EXECUTIVE_SUMMARY.md  API_IMPLEMENTATION_COMPLETE.md  API_IMPLEMENTATION_PLAN.md  API_QUICK_REFERENCE.md  API_REDESIGN_SUMMARY.md  AUGMENTATION_GNSSVODPY_DEPENDENCY.md  BUILD_BACKEND_DECISION.md  BUILD_BACKEND_SOLUTION.md  CANVODPY_DEPENDENCY_GRAPH.md  CANVOD_UTILS_TOOLS_CREATED.md  CANVOD_VIZ_COMPLETE_SUMMARY.md  CANVOD_VIZ_IMPLEMENTATION.md  CHANGELOG.md  CIRCULAR_IMPORT_COMPLETE_FIX.md  CIRCULAR_IMPORT_FIX.md  CIRCULAR_IMPORT_FIX_COMPLETE.md  CITATION  CITATION.cff  CLAUDE.md  CLEANUP_SUMMARY.md  CLI_CONFIGURATION_GUIDE.md  CLI_STATUS_RICH_BASED.md  CODE_DUPLICATION_ANALYSIS.md  CODE_DUPLICATION_CLEANUP_COMPLETE.md  COLUMN_NAME_FIX.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_PHASE2.md  (+164 more)
CONTRIBUTING/: index.html
canvodpy/: Justfile  README.md  myst.yml  package-lock.json  package.json  pyproject.toml
canvodpy/config/: sites.yaml
canvodpy/docs/: index.ipynb
canvodpy/docs/notebooks/: complete_pipeline.py
canvodpy/examples/: GRID_STORAGE_README.md  TESTING_AUDIT_AND_PLAN.md  grid_storage_example.py
canvodpy/src/canvodpy/: __init__.py  api.py  factories.py  fluent.py  functional.py  globals.py  research_sites_config.py  settings.py  workflow.py
canvodpy/src/canvodpy/aux_data/: augmentation.py  clk.py  container.py  pipeline.py  reader.py  sp3.py
canvodpy/src/canvodpy/config/: __init__.py
canvodpy/src/canvodpy/data_handler/: BeiDou_satellites.csv  GALILEO_satellites.csv  data_handler.py  rnx_parser.py
canvodpy/src/canvodpy/diagnostics/: TIMING_DIAGNOSTICS_MIGRATION.md  __init__.py  timing_diagnostics_new_api.py  timing_diagnostics_script.py
canvodpy/src/canvodpy/error_handling/: error_handling.py
canvodpy/src/canvodpy/logging/: __init__.py  context.py  logging_config.py
canvodpy/src/canvodpy/orchestrator/: __init__.py  interpolator.py  matcher.py  pipeline.py  processor.py
canvodpy/src/canvodpy/position/: position.py  spherical_coords.py
canvodpy/src/canvodpy/rinexreader/: metadata.py  rinex_reader.py
canvodpy/src/canvodpy/signal_frequency_mapping/: GALILEO_satellites.csv  IRNSS_satellites.csv  bands.py  gnss_systems.py  signal_mapping.py
canvodpy/src/canvodpy/utils/: __init__.py  date_time.py  file_dir_management.py  telemetry.py  tools.py
canvodpy/tests/: test_backward_compatibility.py  test_factory_validation.py  test_fluent_workflow.py  test_integration_aux_sid_filtering.py  test_integration_sid_filtering.py  test_meta.py  test_umbrella_meta.py  test_workflow_integration.py
(+345 files in other folders)
